# data_analysis_assistant-agent

./: .gitignore  README.md  docker-compose.yml  init_mock_data.sql  insert_complex_mock_data.sql
backend/: pyproject.toml  test_extra_tools.py  test_nl2sql_tools.py  test_qwen3_manual.py
backend/app/: main.py
backend/app/api/: health.py  router.py
backend/app/core/: config.py
backend/app/core/db/: database.py
backend/app/core/llm/: qwen.py
backend/app/services/: chat_service.py
backend/tests/: test_healthz.py
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/Chart/: ChartPanel.tsx
frontend/src/components/Chat/: ChatPanel.tsx
frontend/src/components/Config/: ConfigModal.tsx
frontend/src/components/Sidebar/: SessionPanel.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
